--- a/db/tasks.json
+++ b/db/tasks.json
@@ -2,13 +2,13 @@
   {
     "id": "iakhdt9ltpffgraeft5p1td2",
     "title": "Clean car",
-    "completed": false,
+    "completed": true,
     "createdAt": "2024-04-17T17:01:42.471Z"
   },
   {
     "id": "op4rclnvbbv5he4ssf35rl73",
     "title": "Read a book",
-    "completed": false,
+    "completed": true,
     "createdAt": "2024-04-17T17:01:46.667Z"
   },
   {
@@ -20,13 +20,19 @@
   {
     "id": "wzmha99wiosmn7nnxfzwjch0",
     "title": "Pay bills",
-    "completed": false,
+    "completed": true,
     "createdAt": "2024-04-17T17:01:46.670Z"
   },
   {
     "id": "oit07p6xbfana82dbtsy9gyn",
     "title": "Do laundry",
-    "completed": false,
+    "completed": true,
     "createdAt": "2024-04-17T17:01:46.672Z"
+  },
+  {
+    "id": "fk7wuj3l989bs9s19t21zs03",
+    "title": "456",
+    "completed": true,
+    "createdAt": "2024-04-18T05:44:29.784Z"
   }
 ]
